# lib_garble

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile_m2.dockerfile  README.md
.github/workflows/: cpp.yml
data/: CMakeLists.txt  resources.h.in
src/: CMakeLists.txt  circuit_data.h  garble_helper.cpp  garble_helper.h  gate_types.h  packmsg_helper.cpp  packmsg_helper.h
src/evaluate/: CMakeLists.txt  evaluate.cpp  evaluate.h
src/justgarble/: CMakeLists.txt  README.md  aes-sse.h  block.h  defines.h  garble.cpp  garble_helper.cpp  garble_helper.h  garble_utils.cpp  garble_utils.h  gate_types.h  justGarble.h  parallel.cpp  parallel.h  utils_block.cpp  utils_block.h  xor_gate_processor.cpp  xor_gate_processor.h  xor_graph.cpp  xor_graph.h
src/packmsg/: CMakeLists.txt  packmsg_utils.cpp  packmsg_utils.h  prepackmsg.cpp  prepackmsg.h  stripped_circuit.cpp  stripped_circuit.h
src/parallel_garbled_circuit/: CMakeLists.txt  parallel_garbled_circuit.cpp  parallel_garbled_circuit.h
src/serialize/: CMakeLists.txt  serialize.cpp  serialize.h
src/serialize_packmsg/: CMakeLists.txt  serialize.cpp  serialize.h
src/serialize_pgc/: CMakeLists.txt  serialize.cpp  serialize.h
src/watermark/: CMakeLists.txt  freetype_wrapper.cpp  freetype_wrapper.h  watermark.cpp  watermark.h
tests/: CMakeLists.txt  cli_eval.cpp  cli_eval_stripped.cpp  cli_garble.cpp  cli_garble_and_eval.cpp  cli_garble_and_eval_stripped.cpp  test_evaluate.cpp  test_evaluate_stripped.cpp  test_garble.cpp  test_garble_reference.cpp  test_serialization.cpp  test_stripped.cpp  utils_eval.cpp  utils_eval.h
tests/data/: CMakeLists.txt  garbled_circuit_full_adder.h  resources.h.in
tests/utils/: CMakeLists.txt  utils_files.cpp  utils_files.h
